fix wrapping header around 800px width

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -87,7 +87,7 @@ a:focus{
     background-image: url(../images/bridgeIt-logo.png);
     background-repeat: no-repeat;
     display: inline-block;
-    width: 332px;
+    width: 315px;
     height: 100px;
     background-size: 93%;
     background-position: 0 9px;
